# ghost

./: .gitignore  CHANGELOG.md  CRYSTAL.md  Cargo.toml  LICENSE  README.md  server.json
.github/workflows/: ci.yml  release.yml
bench/: README.md  run_bench.py  soak.py
bench/compare/: README.md  adapters.py  run.py  tasks.py
bench/compare/results/: compare.md
bench/results/: latest.json  latest.md  soak.json  soak.md
crates/ghost-cache/: Cargo.toml
crates/ghost-cache/src/: error.rs  lib.rs  locator_cache.rs  locator_store.rs  uia_mirror.rs
crates/ghost-cli/: Cargo.toml
crates/ghost-cli/src/: main.rs
crates/ghost-core/: Cargo.toml
crates/ghost-core/benches/: convert.rs
crates/ghost-core/src/: error.rs  lib.rs  ocr.rs
crates/ghost-core/src/capture/: idle.rs  marks.rs  mod.rs  screen.rs  verify.rs
crates/ghost-core/src/input/: hotkey.rs  keyboard.rs  mod.rs  mouse.rs  postmessage.rs
crates/ghost-core/src/system/: clipboard.rs  mod.rs
crates/ghost-core/src/uia/: cached_walker.rs  element.rs  event_bus.rs  mod.rs  patterns.rs  sta_pool.rs  tree.rs
crates/ghost-core/tests/: capture_latency_probe.rs
crates/ghost-ground/: Cargo.toml
crates/ghost-ground/benches/: grounding_hot_paths.rs
crates/ghost-ground/src/: cv_detect.rs  engine.rs  lib.rs  marks.rs  parser.rs  types.rs  yolo.rs
crates/ghost-ground/tests/: grounding_accuracy.rs
crates/ghost-ground/tests/fixtures/: grounding_golden.json  vlm_responses.json
crates/ghost-http/: Cargo.toml
crates/ghost-http/src/: main.rs
crates/ghost-intent/: Cargo.toml
crates/ghost-intent/benches/: hot_paths.rs
crates/ghost-intent/src/: compiler.rs  error.rs  executor.rs  jsonlogic.rs  lib.rs
crates/ghost-mcp/: Cargo.toml
crates/ghost-mcp/src/: main.rs
crates/ghost-platform/: Cargo.toml
crates/ghost-platform/src/: lib.rs  linux.rs  macos.rs  types.rs  windows.rs
crates/ghost-session/: Cargo.toml
crates/ghost-session/src/: element.rs  error.rs  lib.rs  locator.rs  reflection.rs  session.rs  shell.rs  tiers.rs  vision.rs
crates/ghost-session/tests/: browser_flow.rs  chaos.rs  cv_live_probe.rs  notepad_flow.rs
crates/ghost-session/tests/fixtures/: form.html
docs/: comparison.md  cross-platform.md  publishing-mcp.md
docs/audits/: round1-confirmed.json
docs/benches/: 2026-05-30-ghost-v0.6.0-benchmarks.md  kimi-flow-v030.md  v030-baseline.md
docs/plans/: 2026-04-17-ghost-v0.2.0-design.md  2026-04-17-ghost-v0.2.0-implementation-plan.md  2026-04-17-http-agent.md  2026-04-18-ghost-v030-speed-overhaul-design.md  2026-04-18-ghost-v030-speed-overhaul.md  2026-05-30-ghost-overhaul-design.md  2026-05-30-ghost-v0.6.0-implementation-plan.md  2026-07-19-ghost-shell-design.md
docs/research/: 2026-05-30-ghost-recon.json
examples/: background_agent_demo.py  diagnose.rs  live_showcase.py
ghost-agent/: agent.py  requirements.txt  tasks-example.json
scripts/: install.ps1
