[workspace]
members = [
    "crates/ghost-core",
    "crates/ghost-session",
    "crates/ghost-mcp",
    "crates/ghost-cache",
    "crates/ghost-intent",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
image = { version = "0.25", default-features = false, features = ["png"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
] }
rusqlite = { version = "0.32", features = ["bundled"] }
sonic-rs = "0.3"
crossbeam-channel = "0.5"
blake3 = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }
