[workspace]
members = [
    "crates/ghost-core",
    "crates/ghost-session",
    "crates/ghost-mcp",
    "crates/ghost-cache",
    "crates/ghost-intent",
    "crates/ghost-cli",
    "crates/ghost-http",
    "crates/ghost-ground",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_WinRT",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Gdi",
    "Foundation",
    "Foundation_Collections",
    "Globalization",
    "Graphics_Imaging",
    "Media_Ocr",
    "Storage_Streams",
] }
rusqlite = { version = "0.32", features = ["bundled"] }
sonic-rs = "0.3"
crossbeam-channel = "0.5"
blake3 = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }
clap = { version = "4", features = ["derive"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
