[package]
name = "ghost-cache"
version = "0.3.0"
edition = "2021"

[dependencies]
ghost-core = { path = "../ghost-core" }
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
blake3.workspace = true
crossbeam-channel.workspace = true
windows.workspace = true

[dev-dependencies]
tempfile = "3"

[features]
default = []
chaos = []
test-hooks = []
