[package]
name = "ghost-cli"
version = "0.3.0"
edition = "2021"
description = "Command-line interface for Ghost Windows desktop automation"
keywords = ["automation", "windows", "cli", "desktop"]
categories = ["command-line-utilities", "os::windows-apis"]
license = "MIT"
repository = "https://github.com/NORTHTEKDevs/ghost"

[[bin]]
name = "ghost"
path = "src/main.rs"

[dependencies]
ghost-session = { path = "../ghost-session" }
ghost-core = { path = "../ghost-core" }
ghost-intent = { path = "../ghost-intent" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
windows = { workspace = true }
