[package]
name = "ghost-core"
version = "0.3.0"
edition = "2021"
description = "Low-level Win32/UIA/SendInput/DXGI primitives for the Ghost desktop automation framework"
keywords = ["automation", "windows", "win32", "desktop", "uia"]
categories = ["os::windows-apis"]
license = "MIT"
repository = "https://github.com/FrostbyteDevTeam/ghost"
readme = "../../README.md"

[dependencies]
windows = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
image = { workspace = true }
crossbeam-channel = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
