[package]
name = "ghost-http"
version = "0.3.0"
edition = "2021"
description = "HTTP REST server for Ghost Windows desktop automation"
keywords = ["automation", "windows", "http", "rest"]
categories = ["web-programming::http-server", "os::windows-apis"]
license = "MIT"
repository = "https://github.com/FrostbyteDevTeam/ghost"

[[bin]]
name = "ghost-http"
path = "src/main.rs"

[dependencies]
ghost-session = { path = "../ghost-session" }
ghost-intent = { path = "../ghost-intent" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
