[package]
name = "ghost-mcp"
version = "0.2.0"
edition = "2021"
description = "MCP server binary exposing 24 Ghost desktop automation tools over stdio JSON-RPC"
keywords = ["automation", "windows", "mcp", "agent", "claude"]
categories = ["os::windows-apis", "command-line-utilities"]
license = "MIT"
repository = "https://github.com/FrostbyteDevTeam/ghost"

[[bin]]
name = "ghost-mcp"
path = "src/main.rs"

[dependencies]
ghost-session = { path = "../ghost-session" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
