[package]
name = "ghost-session"
version = "0.1.0"
edition = "2021"

[dependencies]
ghost-core = { path = "../ghost-core" }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
image = { workspace = true }

[dev-dependencies]

[[example]]
name = "notepad_hello"
path = "../../examples/notepad_hello.rs"

[[example]]
name = "diagnose"
path = "../../examples/diagnose.rs"
