[package]
name = "ghost-session"
version = "0.2.0"
edition = "2021"
description = "Safe async session API for Ghost Windows desktop automation"
keywords = ["automation", "windows", "desktop", "mcp", "agent"]
categories = ["os::windows-apis", "asynchronous"]
license = "MIT"
repository = "https://github.com/FrostbyteDevTeam/ghost"
readme = "../../README.md"

[dependencies]
ghost-core = { path = "../ghost-core" }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
image = { workspace = true }

[dev-dependencies]

[[example]]
name = "notepad_hello"
path = "../../examples/notepad_hello.rs"

[[example]]
name = "diagnose"
path = "../../examples/diagnose.rs"
