[package]
name = "ghost-session"
version = "0.2.0"
edition = "2021"
description = "Safe async session API for Ghost Windows desktop automation"
keywords = ["automation", "windows", "desktop", "mcp", "agent"]
categories = ["os::windows-apis", "asynchronous"]
license = "MIT"
repository = "https://github.com/FrostbyteDevTeam/ghost"
readme = "../../README.md"

[dependencies]
ghost-core = { path = "../ghost-core" }
ghost-cache = { path = "../ghost-cache" }
ghost-intent = { path = "../ghost-intent" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"
windows = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
image = { workspace = true }

[dev-dependencies]
ghost-intent = { path = "../ghost-intent" }

[[example]]
name = "notepad_hello"
path = "../../examples/notepad_hello.rs"

[[example]]
name = "diagnose"
path = "../../examples/diagnose.rs"
